@@ -39,7 +39,7 @@
 void main()
 {
 	float r = length( gl_TexCoord[0].xy - vec2( 0.5 ) );
-	float g = mix( 0.5, 0.05, ieFilteredStep( 0.35, r ) );
+	vec3 c = mix( gl_Color.rgb, vec3( 0.05, 0.05, 0.05 ), ieFilteredStep( 0.35, r ) );
 	float a = 1.0 - ieFilteredStep( 0.45, r );
-	gl_FragColor = vec4( g, g, g, a );
+	gl_FragColor = vec4( c, a );
 }
